WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105592
Perform cleanup in WebProcess if the NetworkProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=105592
Summary
Perform cleanup in WebProcess if the NetworkProcess crashes
Brady Eidson
Reported
2012-12-20 17:33:55 PST
Perform cleanup in WebProcess if the NetworkProcess crashes. Any outstanding ResourceLoaders waiting on loads from the network process should probably fail, and for now I'm thinking fail as "cancelled" In radar as <
rdar://problem/12903117
>
Attachments
Patch v1
(4.88 KB, patch)
2012-12-21 10:02 PST
,
Brady Eidson
ap
: review-
Details
Formatted Diff
Diff
Patch v2
(7.96 KB, patch)
2012-12-21 10:36 PST
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-12-21 10:02:23 PST
Created
attachment 180532
[details]
Patch v1
Alexey Proskuryakov
Comment 2
2012-12-21 10:20:11 PST
Comment on
attachment 180532
[details]
Patch v1 Discussed this in person. 1. It should be a real load failure, not cancellation. 2. cancel() should call into NetworkProcess (to actually cancel in normal case), which we don't want to do here.
Brady Eidson
Comment 3
2012-12-21 10:33:48 PST
(In reply to
comment #2
)
> (From update of
attachment 180532
[details]
) > Discussed this in person. > > 1. It should be a real load failure, not cancellation.
Yup.
> 2. cancel() should call into NetworkProcess (to actually cancel in normal case), which we don't want to do here.
Filed <
rdar://problem/12924973
> for that, will import in to bugzilla later.
Brady Eidson
Comment 4
2012-12-21 10:36:16 PST
Created
attachment 180535
[details]
Patch v2
WebKit Review Bot
Comment 5
2012-12-21 10:39:00 PST
Attachment 180535
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30: Code inside a namespace should not be indented. [whitespace/indent] [4] Source/WebKit2/Shared/API/c/WKError.h:46: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 6
2012-12-21 10:47:16 PST
http://trac.webkit.org/changeset/138387
Brady Eidson
Comment 7
2012-12-21 11:49:23 PST
Updated localizable strings in followup
http://trac.webkit.org/changeset/138394
Ryosuke Niwa
Comment 8
2012-12-26 15:11:13 PST
http://trac.webkit.org/changeset/138394
@@ -621,5 +639,5 @@ /* accessibility role description for a file upload button */ -"file upload" = "file upload button"; +"file upload" = "file upload"; caused platform/mac/accessibility/file-upload-button-subrole.html to start failing. Should we just rebaseline or revert the change?
Brady Eidson
Comment 9
2012-12-26 16:40:50 PST
(In reply to
comment #8
)
>
http://trac.webkit.org/changeset/138394
> @@ -621,5 +639,5 @@ > > /* accessibility role description for a file upload button */ > -"file upload" = "file upload button"; > +"file upload" = "file upload"; > > caused platform/mac/accessibility/file-upload-button-subrole.html to start failing. Should we just rebaseline or revert the change?
That happened simply because I ran update-localizable-strings (or whatever it is actually called) which apparently nobody had done in awhile. If code changed that caused the generated string to be "file upload button" and that code was correct, then we should rebaseline. I have no idea how to explore that.
Sam Weinig
Comment 10
2012-12-27 09:15:39 PST
(In reply to
comment #9
)
> (In reply to
comment #8
) > >
http://trac.webkit.org/changeset/138394
> > @@ -621,5 +639,5 @@ > > > > /* accessibility role description for a file upload button */ > > -"file upload" = "file upload button"; > > +"file upload" = "file upload"; > > > > caused platform/mac/accessibility/file-upload-button-subrole.html to start failing. Should we just rebaseline or revert the change? > > That happened simply because I ran update-localizable-strings (or whatever it is actually called) which apparently nobody had done in awhile. > > If code changed that caused the generated string to be "file upload button" and that code was correct, then we should rebaseline. > > I have no idea how to explore that.
Lets just update the results and check with Chris Fleizach after winter shutdown.
chris fleizach
Comment 11
2012-12-27 09:49:56 PST
We should rename the key (and string) to be "file upload button" (In reply to
comment #10
)
> (In reply to
comment #9
) > > (In reply to
comment #8
) > > >
http://trac.webkit.org/changeset/138394
> > > @@ -621,5 +639,5 @@ > > > > > > /* accessibility role description for a file upload button */ > > > -"file upload" = "file upload button"; > > > +"file upload" = "file upload"; > > > > > > caused platform/mac/accessibility/file-upload-button-subrole.html to start failing. Should we just rebaseline or revert the change? > > > > That happened simply because I ran update-localizable-strings (or whatever it is actually called) which apparently nobody had done in awhile. > > > > If code changed that caused the generated string to be "file upload button" and that code was correct, then we should rebaseline. > > > > I have no idea how to explore that. > > Lets just update the results and check with Chris Fleizach after winter shutdown.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug