Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h
@@ -27,6 +27,7 @@
 #define WebErrors_h
 
 namespace WebCore {
+    class KURL;
     class ResourceError;
     class ResourceRequest;
     class ResourceResponse;
@@ -41,6 +42,7 @@ WebCore::ResourceError interruptedForPolicyChangeError(const WebCore::ResourceRe
 WebCore::ResourceError cannotShowMIMETypeError(const WebCore::ResourceResponse&);
 WebCore::ResourceError fileDoesNotExistError(const WebCore::ResourceResponse&);
 WebCore::ResourceError pluginWillHandleLoadError(const WebCore::ResourceResponse&);
+WebCore::ResourceError internalError(const WebCore::KURL&);
 
 } // namespace WebKit
 
