Source/WebKit2/WebProcess/WebCoreSupport/mac/WebErrorsMac.mm
@@ -87,4 +87,9 @@ ResourceError pluginWillHandleLoadError(const ResourceResponse& response)
     return ResourceError(WebError::webKitErrorDomain(), kWKErrorCodePlugInWillHandleLoad, response.url(), WEB_UI_STRING("Plug-in handled load", "WebKitErrorPlugInWillHandleLoad description"));
 }
 
+ResourceError internalError(const KURL& url)
+{
+    return ResourceError(WebError::webKitErrorDomain(), kWKErrorInternal, url, WEB_UI_STRING("WebKit encountered an internal error", "WebKitErrorInternal description"));
+}
+
 } // namespace WebKit
